Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="song-row" data-id="1" data-title="My Heart Go" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="2:41" data-cover="soundify.png" data-src="My heart go-320kbps.mp3"></div>
                 <div class="song-row" data-id="2" data-title="12 Mah" data-artist="Dulla" data-album="Dulla" data-duration="6:03" data-cover="soundify.png" data-src="12 Mah-320kbps.mp3"></div>
                 <div class="song-row" data-id="3" data-title="Never Ever" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="2:26" data-cover="soundify.png" data-src="Never Ever-320kbps.mp3"></div>
-                <div class="song-row" data-id="4" data-title="P Pop Culture" data-artist="Karan Aujla" data-album="Karan Aujla" data-duration="3:31" data-cover="soundify.png" data-src="P Pop Culture-320kbps.mp3"></div>
+                <div class="song-row" data-id="4" data-title="P Pop Culture" data-artist="Karan Aujla" data-album="Karan Aujla" data-duration="3:31" data-cover="soundify.png" data-src="P POP CULTURE-320kbps.mp3"></div>
                 <div class="song-row" data-id="5" data-title="Greatest" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="2:58" data-cover="soundify.png" data-src="Greatest-320kbps.mp3"></div>
                 <div class="song-row" data-id="6" data-title="Kavita" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="3:49" data-cover="soundify.png" data-src="Kavita-320kbps.mp3"></div>
                 <div class="song-row" data-id="7" data-title="Meharma" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="3:48" data-cover="soundify.png" data-src="Meharma-320kbps.mp3"></div>
@@ -129,4 +129,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
